--- a/css/style.css
+++ b/css/style.css
@@ -2235,8 +2235,8 @@ hamburger
   width: 100%;
 }
 #skills .skills .io-container.io-item .skills-intro, #skills .skills .io-container.io-item .dropdown {
-  opacity: 1;
-  transform: scale(0.9);
+  opacity: 0.7;
+  transform: translateY(1rem);
   transition: 1s;
 }
 #skills .skills .io-container.active-item .skills-intro, #skills .skills .io-container.active-item .dropdown {
@@ -2280,6 +2280,7 @@ hamburger
   padding: 5vh 5vw 5vh;
   position: relative;
   transform-style: preserve-3d;
+  background: #fafafa;
 }
 @media (min-width: 820px) {
   #contact .contact {
@@ -2289,7 +2290,7 @@ hamburger
 #contact .contact .contact-header {
   width: 100%;
   height: auto;
-  background: #fff;
+  background: #fafafa;
   z-index: 10;
 }
 #contact .contact .contact-items {
@@ -2297,7 +2298,6 @@ hamburger
   display: flex;
   flex-direction: column;
   gap: 5vh;
-  border: 2px solid blue;
 }
 @media (min-width: 1024px) {
   #contact .contact .contact-items {
@@ -2305,7 +2305,6 @@ hamburger
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
-    padding: 0;
     margin: 5vh auto;
     gap: 0.5rem;
   }
@@ -2837,8 +2836,13 @@ hamburger
 
 .work {
   min-height: 100vh;
-  padding: 5vh 1rem;
   padding: 5vh 5vw;
+  background: #fafafa;
+}
+@media (min-width: 768px) {
+  .work {
+    padding: 5vh 5vw 10vh;
+  }
 }
 .work .work-container {
   margin-top: 10vh;
@@ -2848,13 +2852,18 @@ hamburger
     margin-top: 15vh;
   }
 }
+.work .work-container .item-flex-container {
+  background: #fff;
+}
 @media (min-width: 820px) {
   .work .work-container .item-flex-container {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 1rem;
+    border-radius: 0.25rem;
   }
 }
 .work .work-container .item {
@@ -2882,18 +2891,15 @@ hamburger
 @media (min-width: 768px) {
   .work .work-container .item .item-header {
     display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 @media (min-width: 820px) {
   .work .work-container .item .item-header {
     width: 50%;
-    padding: 1rem;
-  }
-}
-@media (min-width: 1024px) {
-  .work .work-container .item .item-header {
-    padding: 5vh 5vw;
-    padding: 5vh 5vw 5vh 0;
+    padding: 0 1rem;
   }
 }
 .work .work-container .item .item-header .item-title {
@@ -3055,19 +3061,20 @@ hamburger
 @media (min-width: 820px) {
   .work .work-container .item .item-content {
     width: 50%;
+    padding: 1rem;
   }
 }
 .work .work-container .item .item-content .item-image {
   overflow: hidden;
   width: 100%;
   border-radius: 0.25rem;
-  margin: 0 auto;
 }
 .work .work-container .item .item-content .item-image img {
   width: 100%;
   height: 50%;
   object-fit: cover;
   transition: 0.5s;
+  border-radius: 0.25rem;
 }
 .work .work-container .item .item-content .item-image:hover img {
   transform: scale(1.1);
