--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,9 +1,10 @@
 .work {
     min-height: 100vh;
     // background: #ddd;
-    padding: 5vh 1rem;
     padding: 5vh 5vw;
+    background: #fafafa;
     @media (min-width: 768px) {
+    padding: 5vh 5vw 10vh;
     }
 
     .work-container {
@@ -13,12 +14,16 @@
             margin-top: 15vh;
         }
         .item-flex-container {
+            background: $background-light;
             @include lg {
                 display: flex;
                 flex-direction: row-reverse;
                 align-items: center;
+                align-items: flex-start;
                 justify-content: space-between;
                 gap: 1rem;
+                // border: 2px solid red;
+                border-radius: .25rem;
             }
             
         }
@@ -46,15 +51,17 @@
                 }
                 @include md {
                     display: grid;
+                    display:flex;
+                    flex-direction: column;
+                    justify-content: space-between;
                 }
                 @include lg {
                     // border: 2px solid pink;
                     width: 50%;
-                    padding: 1rem;
+                    padding: 0 1rem;
                 }
                 @include xlg {
-                    padding: 5vh 5vw;
-                    padding: 5vh 5vw 5vh 0;
+                    // padding: 5vh 5vw 5vh 0;
                     
                 }
                 .item-title {
@@ -225,6 +232,7 @@
                 @include lg {
                     // border: 2px solid yellow;
                     width: 50%;
+                    padding: 1rem;
                 }
                 .item-image {
                     // height: 50vh;
@@ -232,13 +240,13 @@
                     width: 100%;
                     // border: 2px solid $overlay-blue-darkest;
                     border-radius: .25rem;
-                    margin: 0 auto;
+                    // margin: 0 auto;
                     img {
                         width: 100%;
                         height: 50%;
                         object-fit: cover;
                         transition: .5s;
-                        // border-radius: .25rem;
+                        border-radius: .25rem;
                         // border: 2px solid pink;
                     }
 
